SFDC DevOps Test/src/objects/Estimating_Assumption__c.object
<CustomObject>
    <description>TOOLKIT - This object contains assumptions against any request.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Estimating Assumption</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requet related to the Estimating Assumption</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Estimating Assumptions</relationshipLabel>
        <relationshipName>Estimating_Assumptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the Estimating Assumption</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Estimating Assumption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Estimating Assumption ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimating Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>